# EA

./: .coverage  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .seen_thread_ids.json  .system_manifest.yaml  ANTHROPIC_SETUP.md  BATCH_MUTATION_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  Dockerfile  Dockerfile.prod  ENHANCED_TEST_COVERAGE_IMPLEMENTATION.md  ENV_SETUP.md  MAKE_PUBLIC_CHECKLIST.md  Makefile  NEXT_PHASE_PROPOSAL.md  ORA_CHAT_FIX_SUMMARY.md  ORA_CLAUDE_INTEGRATION.md  OpenCode.md  README.md  README.txt  SECURITY_AUDIT_REPORT.md  TEST_COVERAGE_ENHANCEMENT.md  _temp_create_signal.py  apply_feedback_tags.py  archive_checked_emails.py  audit_orphans.py  audit_yaml.py  auth_gmail_token.py  autofix_yaml_retrospectives.py  backup_qdrant_data.py  capture_insight.py  chat_with_gpt.py  check_token_scopes.py  classify_email_tasks_to_loop.py  classify_loop_gpt.py  classify_loop_gpt_openai_v1.py  classify_structured_email_tasks.py  classify_structured_email_tasks_with_reasoning.py  (+154 more)
.github/workflows/: ci.yml  main.yml  startup-check.yml  test-suite.yml  test.yml
.opencode/: opencode.db-shm  opencode.db-wal
Cursor/: ora_vs_ai_dev_tasks.md
Cursor/Prompts/: loop_memory_context.md
Cursor/Sessions/: 2025-05-25-loop-weighting.md
Obsidian/MCP/: systems.md
Retrospectives/: introduction_0.1_reflection.md  reflection_01.md  reflection_02.md  reflection_03.md
System/: EA_Control_Center.md  EA_Control_Center_UPDATED.md  EA_Vision.md  ea_streamlit_ui_test_checklist.md  ea_summary_agent_plan.md  status.json  vault_index.json
__tests__/: comprehensive-api-coverage.test.ts  comprehensive-ui.test.tsx
backups/: ora_backup_20250523_184701_manifest.txt  ora_backup_20250523_184726_manifest.txt
classifiers/: program_classifier.py
credentials/: token_gmail.pkl
data/: dependency_graph.db
db/: loop_feedback.db
deploy/: README.md  launch_streamlit.sh  ora.service  test_loader.py
docs/: Ora_Phase_5.7.3_Feedback_Propagation.md  README.md  api_documentation.md  dependency_management_plan.md  ea_system_overview.md  mecca_email_processor.md  ora_code_guide.md  ora_engineering_system.md  production.md  sessions.md  skipped_files_report.md  still_skipped_files.md  troubleshooting.md
ea_assistant/: README.md
emails/: live_gmail_test.json
gmail/: processed_threads.json
gpt_supervised/: generate_logic_patch.py
logs/: alert_report.txt  email_ingest_log.md  metrics.json  scheduler_state.json  sync_loops.err  sync_loops.out
prompts/: 0.4_prompt.txt  0.5_prompt.txt  0.6_prompt.txt  unknown_prompt.txt
runtime/: phase_execution_log.yaml  system_roadmap.yaml
scripts/: analyze-loop-schema-patterns.ts  apply_feedback_tags.py  audit-loop-metadata.ts  backup.sh  batch-artifact-scaffold.cjs  batch-artifact-scaffold.ts  bootstrap.sh  bootstrap_test.py  clean_legacy_ui_pages.py  debug_scan_files.py  deploy_check.sh  deploy_prod.sh  extract_feedback_tags.py  find_streamlit_ui_files.sh  fix_hardcoded_paths.py  fix_runner.py  fswatch_autolog.sh  generate_system_manifest.py  install_cursor_dashboard_agent.sh  install_fswatch_autolog_agent.sh  install_fswatch_direct_agent.sh  install_loop_summary_agent.sh  install_watch_and_log_agent.sh  log.sh  log_cursor_edit.sh  prepare_frontend_data.py  promote_loops.py  regenerate_manifest_tag_5_4.py  run_logging_tests.py  score_feedback_tags.py  split_multi_roadmap_file.py  standardize_session.py  startup_check.py  suggest_feedback_tags.py  sync_feedback_to_sqlite.py  test_watch.sh  update_loop_ids.py  update_qdrant_embeddings.py  validate_backup.py  verify_ora_structure.py  (+1 more)
src/: __init__.py  audit_orphans.py  auth_gmail_token.py  cadence_manager.py  capture_insight.py  check_token_scopes.py  clean_quoted_tags.py  create_test_session.py  cursor_chat.py  cursor_dashboard.py  ea_assistant.py  extract_project_goals.py  find_real_signal_tasks.py  generate_vault_snapshot.py  generate_weekly_summary.py  insert_loop_to_sqlite.py  insert_test_vector.py  insert_to_sqlite.py  main.py  organize_files.py  patch_weekly_summaries.py  path_config.py  print_ea_assistant_structure.py  quote_tags_patch.py  run_messageid_to_threadid_test.py  run_rfc822msgid_to_archive.py  session_manager.py  summarize_insight.py  update_insight_panel.py  vault_alignment_checker.py
tests/: conftest.py  test_agent_commands.py  test_backup_system.py  test_create_test_session.py  test_cursor_chat.py  test_cursor_dashboard.py  test_dashboard.py  test_dashboard_ui.py  test_ea_assistant.py  test_email_ingest.py  test_gmail_pipeline.py  test_gpt.py  test_integration_signal_to_loop.py  test_logging.py  test_loop_cli_control.py  test_loop_feedback.py  test_loop_file_structure.py  test_loop_status_dashboard.py  test_memory.py  test_multi_program_routing.py  test_ora_chat.py  test_process_mecca_emails.py  test_reflections.py  test_roadmap_parser.py  test_self_healing.py  test_system_integrity.py  test_ui_loaders.py  test_ui_pages.py  test_ui_render.py  test_vector_embedding.py
tools/: system_integrity_report.md
ui/: gpt_ora_chat.py  inbox.py  streamlit_ora_chat.py  summary_agent.py
vector_db/: chroma.sqlite3
vector_index/: chunk_metadata.pkl
(+2119 files in other folders)
